--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/lavanda.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Медитация</title>
   </head>
   <body>
@@ -13,7 +13,10 @@
     <div class="container-fluid">
       <div class="row">
         <div style="height: 100%; width: 100%; background-image: url('img/IMG_2412.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover;">
-          <p>PURE PEACE. PURE LIFE.
+          <div>
+            <span class="h6 text-white"; style="text-transform:uppercase; letter-spacing: 2.5px; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased;">PURE PEACE. PURE LIFE.</span>
+          </div>
+          <p>
 ВСЕМИРНАЯ МЕДИТАЦИЯ
 ВО БЛАГО ПЛАНЕТЫ
 Международная молитва-медитация для гармонизации процессов на планете.
