--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </header>
     <div class="container-fluid">
       <div class="row">
-        <div style="height: 100%; width: 100%; background-image: url('img/IMG_2412.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover;">
+<!--         <div style="text-align: center; height: 100%; width: 100%; background-image: url('img/IMG_2412.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover;"> -->
+<div style="text-align: center; height: 100%; width: 100%; background-image: url('img/background_clouds.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover; background-attachment: fixed;">
           <div>
             <span class="h6 text-white"; style="text-transform:uppercase; letter-spacing: 2.5px; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased;">PURE PEACE. PURE LIFE.</span>
           </div>
