--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     </header>
     <div class="container-fluid">
       <div class="row">
-<!--         <div style="text-align: center; height: 100%; width: 100%; background-image: url('img/IMG_2412.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover;"> -->
 <div style="text-align: center; height: 100%; width: 100%; background-image: url('img/background_clouds.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover; background-attachment: fixed;">
-          <div>
+          <div class="pt-4 pb-4">
             <span class="h6 text-white"; style="text-transform:uppercase; letter-spacing: 2.5px; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased;">PURE PEACE. PURE LIFE.</span>
           </div>
-          <p>
-ВСЕМИРНАЯ МЕДИТАЦИЯ
-ВО БЛАГО ПЛАНЕТЫ
-Международная молитва-медитация для гармонизации процессов на планете.
+          
+          <div class="pt-4 pb-4 pl-5 pr-5">
+            <span class="display-4 text-white"; style="text-transform:uppercase; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased; letter-spacing: .5px; ">ВСЕМИРНАЯ МЕДИТАЦИЯ</br>ВО БЛАГО ПЛАНЕТЫ</span>
+          </div>
+          <div class="pt-4 pb-4 pl-5 pr-5">
+            <span class="h5 text-white"; style="font-weight: 300; font-family: 'Roboto',Arial,sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Международная молитва-медитация для гармонизации процессов на планете.</span>
+          </div>
+
+<p>
 Друзья, приглашаем вас на международную молитву-медитацию 4 апреля 2020г в 22:45 EST (5 апреля в 05:45 Москва).
 Сила для радикальных изменений находится внутри нас, и она может усилиться многократно, если будет реализована в унисон коллективно.
 Вместе мы можем приступить к созданию нового мира — мира Золотого Века, где царят Любовь, Свобода, Изобилие, Мир и Совершенное Здоровье!
