--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="container-fluid">
       <div class="row">
 <div style="text-align: center; height: 100%; width: 100%; background-image: url('img/IMG_2412.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover; background-attachment: fixed;">
-          <div class="pt-4 pb-4">
+          <div class="my-5 pt-5 pb-4">
             <span class="h6 text-white"; style="text-transform:uppercase; letter-spacing: 2.5px; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased;">PURE PEACE. PURE LIFE.</span>
           </div>
           
-          <div class="pt-4 pb-4 pl-5 pr-5">
+          <div class="mt-5 pt-4 pb-4 pl-5 pr-5">
             <span class="display-4 text-white"; style="text-transform:uppercase; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased; letter-spacing: .5px; ">ВСЕМИРНАЯ МЕДИТАЦИЯ</br>ВО БЛАГО ПЛАНЕТЫ</span>
           </div>
-          <div class="pt-4 pb-4 pl-5 pr-5">
+          <div class="mb-5 pt-4 pb-5 pl-5 pr-5">
             <span class="h5 text-white"; style="font-weight: 300; font-family: 'Roboto',Arial,sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Международная молитва-медитация для гармонизации процессов на планете.</span>
           </div>
 
