--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
             <span class="display-4 text-white"; style="text-transform:uppercase; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased; letter-spacing: .5px; ">ВСЕМИРНАЯ МЕДИТАЦИЯ</br>ВО БЛАГО ПЛАНЕТЫ</span>
           </div>
           <div class="mb-5 pt-4 pb-5 pl-5 pr-5">
-            <span class="h5 text-white"; style="font-weight: 300; font-family: 'Roboto',Arial,sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Международная молитва-медитация для гармонизации процессов на планете.</span>
+            <span class="h5 text-white"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Международная молитва-медитация для гармонизации процессов на планете.</span>
           </div>
-
-<p>
-Друзья, приглашаем вас на международную молитву-медитацию 4 апреля 2020г в 22:45 EST (5 апреля в 05:45 Москва).
+          <div class="mt-5 pt-4 pb-5 pl-5 pr-5">
+            <span class="h5"; style="font-weight: 400; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Друзья, приглашаем вас на международную молитву-медитацию 4 апреля 2020г в 22:45 EST</br>(5 апреля в 05:45 Москва).</span>
+          </div>
+          <div class="pt-4 pb-5 pl-5 pr-5 text-justify">
+            <span class="h6"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">
 Сила для радикальных изменений находится внутри нас, и она может усилиться многократно, если будет реализована в унисон коллективно.
+</br>
 Вместе мы можем приступить к созданию нового мира — мира Золотого Века, где царят Любовь, Свобода, Изобилие, Мир и Совершенное Здоровье!
+</br></br>  
 
 НАИБОЛЕЕ МОЩНЫЙ ИНСТРУМЕНТ, КОТОРЫЙ МЫ ИМЕЕМ ДЛЯ ОСВОБОЖДЕНИЯ, ОБНОВЛЕНИЯ И ИСЦЕЛЕНИЯ ЧЕЛОВЕЧЕСТВА И ВСЕЙ ЖИЗНИ НА ЭТОЙ ПЛАНЕТЕ — НАПРАВЛЕННОЕ ГРУППОВОЕ НАМЕРЕНИЕ ЧЕРЕЗ МАССОВУЮ МЕДИТАЦИЮ.
 
@@ -97,7 +101,8 @@ https://www.timeanddate.com/worldclock/fixedtime.html..
 
 В ходе эксперимента его участники с целью обретения указанного чувства прибегали к медитации.В специально назначенное время в специально выбранные дни месяца этих людей забрасывали в истерзанные войной регионы Ближнего Востока. И когда они посреди всего этого кошмара преисполнялись чувством мира, террористические действия прекращались, преступления против мирных жителей шли на спад, количество пострадавших, доставляемых в госпитали, и число дорожных происшествий уменьшалось.
 
-Такие исследования подтвердили ранее сделанные открытия: когда даже небольшой процент населения обретает внутреннее состояние мира и покоя, это состояние отражается в окружающем мире.Это исследование получило название «Международного проекта мира на Ближнем Востоке», а его результаты опубликовал «Журнал разрешения конфликтов» (1988 г.).</p>          
+Такие исследования подтвердили ранее сделанные открытия: когда даже небольшой процент населения обретает внутреннее состояние мира и покоя, это состояние отражается в окружающем мире.Это исследование получило название «Международного проекта мира на Ближнем Востоке», а его результаты опубликовал «Журнал разрешения конфликтов» (1988 г.).          
+</span></div>
         </div>
       </div>
     </div>
