--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <span class="h6 text-white"; style="text-transform:uppercase; letter-spacing: 2.5px; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased;">PURE PEACE. PURE LIFE.</span>
           </div>
           
-          <div class="mt-5 pt-4 pb-4 pl-5 pr-5">
-            <span class="display-4 text-white"; style="text-transform:uppercase; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased; letter-spacing: .5px; ">ВСЕМИРНАЯ МЕДИТАЦИЯ</br>ВО БЛАГО ПЛАНЕТЫ</span>
+          <div class="mt-5 px-4 py-4">
+            <span class="display-4 text-white"; style="text-transform:uppercase; font-weight: 600; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased; letter-spacing: .5px; ">ВСЕМИРНАЯ МЕДИТАЦИЯ</br>ВО БЛАГО ПЛАНЕТЫ</span>
           </div>
           <div class="mb-5 pt-4 pb-5 pl-5 pr-5">
             <span class="h5 text-white"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Международная молитва-медитация для гармонизации процессов на планете.</span>
@@ -26,83 +26,108 @@
           <div class="mt-5 pt-4 pb-5 pl-5 pr-5">
             <span class="h5"; style="font-weight: 400; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Друзья, приглашаем вас на международную молитву-медитацию 4 апреля 2020г в 22:45 EST</br>(5 апреля в 05:45 Москва).</span>
           </div>
-          <div class="pt-4 pb-5 pl-5 pr-5 text-justify">
-            <span class="h6"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">
+<!--                       <div class="pt-4 pb-5 pl-5 pr-5 text-justify">
+<span class="h6"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;"> -->
+          <div class="pt-4 pb-5 pl-5 pr-5 text-justify"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased;">
 Сила для радикальных изменений находится внутри нас, и она может усилиться многократно, если будет реализована в унисон коллективно.
 </br>
 Вместе мы можем приступить к созданию нового мира — мира Золотого Века, где царят Любовь, Свобода, Изобилие, Мир и Совершенное Здоровье!
-</br></br>  
+</br></br>
 
 НАИБОЛЕЕ МОЩНЫЙ ИНСТРУМЕНТ, КОТОРЫЙ МЫ ИМЕЕМ ДЛЯ ОСВОБОЖДЕНИЯ, ОБНОВЛЕНИЯ И ИСЦЕЛЕНИЯ ЧЕЛОВЕЧЕСТВА И ВСЕЙ ЖИЗНИ НА ЭТОЙ ПЛАНЕТЕ — НАПРАВЛЕННОЕ ГРУППОВОЕ НАМЕРЕНИЕ ЧЕРЕЗ МАССОВУЮ МЕДИТАЦИЮ.
-
+</br></br>
 Давайте использовать его в полной мере!
-
+</br></br>
 Мы считаем, что происходящие сейчас на земле- эпидемии, войны, рост социального напряжения, изменение климата и природные катаклизмы являются знаковыми и дают шанс изменить к лучшему тенденции развития Разума на планете.
+</br>
 Мы можем добровольно использовать силу, дарованную Создателем - силу своего разума и взять ответственность за происходящее на себя. Отказаться от деструктивного образа мысли и поведения, перестать разрушать себя и планету и волею своей повлиять на развитие событий, исцеляя мир во благо всех живущих.
-
+</br></br>
 Это возможно за счёт консолидации воли множества людей в едином порыве, концентрации на позитивных образах и эмоциях в процессе молитвы-медитации, что позволит создать матрицу нового чистого и гармоничного мира.
+</br>
 Какими бы ни были ваши личные взгляды или убеждения в отношении эволюции Разума на планете, мы все видим необходимость выбора более экологичной модели поведения популяции по отношению к себе и к планете в целом.
-
+</br></br>
 Вместе мы можем многое!
-
+</br></br>
 Давайте соберемся вместе для глобальной медитации 4 апреля и в состоянии радости, любви и благодарности объединимся как множество точек Света. И пусть эти острова и материки Света станут якорями энергий Мира, Гармонии, Изобилия, Свободы и Исцеления!
+</br>
 Мы должны использовать силу нашего коллективного разума и намерения для формирования мощной трансформационной волны преображения особенно в ключевые даты. Мы сосредоточимся исключительно на конечной цели — гармонизации жизни на планете и формировании сознания Новый Человек.
-
+</br></br>
 Мы просим вас расширить эту силу, обратившись ко всем, кто следит за вашими страницами в социальных сетях, читает ваши книги или блоги и сообщить, что массовые медитации в глобальном масштабе могут стать эффективным инструментом преображения и главным приоритетом в создавшейся ситуации в мире.
-
-Давайте начнём с мощного астрологического портала, который откроется 4 апреля 2020 и
-сделаем это независимо от того, в какое время суток он попадает в ваш часовой пояс. Это всего лишь 20 минут, которые могут изменить всю судьбу нашей планеты!
+</br></br>
+Давайте начнём с мощного астрологического портала, который откроется 4 апреля 2020 и сделаем это независимо от того, в какое время суток он попадает в ваш часовой пояс. Это всего лишь 20 минут, которые могут изменить всю судьбу нашей планеты!
+</br>
 Вместе мы создадим чудо, объединившись как единый Разум и единое Сердце в точный момент соединения Юпитера и Плутона, то есть 4 апреля в 22:45 EST (5 апреля в 05:45 Москва), чтобы заякорить эти высокие вибрационные энергии и направить их с помощью нашего намерения на освобождение и исцеление человечества!
-
+</br></br>
 Скажите, вы чувствовали в присутствие духовно сильной личности силовое поле любви и спокойствия, находиться в котором приятно и легко? Так почему бы нам с вами не развивать в себе эту чудодейственную способность с помощью любви менять мир к лучшему, пробуждая в людях то, что называется Душой?
-
-ВАЖНО!
+</br></br>
+<span style="font-weight: 600;">ВАЖНО!</span>
+</br>
 Во время медитации необходимо ощущать мир внутри себя, не просто мыслить о необходимости исцеления разума и планеты, формулируя пожелания, а живо представлять происходящие изменения и чувствовать себя так, как будто эти изменения уже произошли. Видеть гармоничные образы чистой, мирной планеты и радостных людей, чувствовать ароматы цветов, слышать шум прибоя и шелест листвы, видеть себя в в этих прекрасных местах и эмоционально, ярко переживать этот чудесный опыт. Очень важно убедить себя, что этот мир – реальность, что он уже проявляется, что жители земли готовы принять новую реальность.
+</br></br></br>
 
-
-ТЕХНИКА ПРОВЕДЕНИЯ МЕДИТАЦИИ.
+<span style="font-weight: 600;">ТЕХНИКА ПРОВЕДЕНИЯ МЕДИТАЦИИ.</span>
+</br>
 1. Используйте любую знакомую и доступную вам технику войдите в расслабленное, спокойное и доброжелательное состояние сознания.
-
+</br></br>
 2. Выразите своё намерение использовать эту молитву-медитацию в качестве инструмента для гармонизации своего состояния, улучшения качества жизни всех живущих на планете существ, очищения и обновления природного потенциала планеты.
+</br></br>
 
 3. Сядьте в удобном месте в удобную позу и закройте глаза, подняв взгляд на 20 градусов над линией горизонта (не поднимая при этом лица) . Сделав два спокойных вдоха-выдоха, обратитесь к значимым для вас силам тонкого мира и пригласите участвовать и оказать необходимое содействие в молитве-медитации.
+</br></br>
 
 Представьте столб сияющего белого света Космического Разума, излучаемый сверху и несущий любовь Создателя и потенциал преображения. Этот сияющий свет проходит через вашу голову и далее через тело в центр Земли.
+</br>
 В центре Земли зарождается шар золотого света, его свечение нарастает, шар становится ослепительно-ярким и от него к поверхности земли устремляется мощный золотой луч, несущий Силу и материнскую любовь планеты к своим детям.
+</br></br>
 
 Два луча встречаются в вашем теле и в месте встречи возникает сгусток яркого тёплого бело-золотистого света. Свечение его нарастает и тёплый исцеляющий свет любви и потенциалов распространяется в каждую клеточку вашего тела, насыщая энергией и силой преображения.
+</br></br>
 
 Вы чувствуете наполнение силой , светом и энергией изнутри. Представьте, что это внутреннее свечение становится все ярче и вот уже ваше тело светится прекрасным бело-золотым светом силы Духа и вы начинаете излучать тысячи золотых лучиков, тянущихся ко всем живым существам планеты, наполняя их новой целительной энергией любви и сострадания. И Свет распространяется по планете, наполняя умы и сердца людей, даря понимание и силу радостного преображения мира. Этот свет очищает моря, реки, источники и воздух в городах, уходят проблемы и болезни, и по планете звучат радостные голоса зверей и птиц, звонкий смех детей.
+</br></br>
 
 Свет преображает все страхи, всю агрессию, всю ложь и дисгармонию этого мира в умах и сердцах людей.
 Мягко по-матерински он укутывает людей и наделяет новым сознанием, более сострадательным, более радостным, несущим больше любви, света и гармонии живущим на планете существам и самой матушке Земле.
-
+</br>
 Вы при этом растете, увеличиваясь в размере, и сообразно увеличивается ваше тело света, занимая всё больше и больше пространства. Вместе с этим растёт и транслируемая вами сила радостной, исцеляющей любви. И вот уже перед вами маленький голубой шар, это наша родная любимая планета-наш дом. Вы испытываете к ней чувство нежной любви, и укутываете ее золотым облаком света, и знаете, что в этот момент вам радостно отвечают на вашу любовь и заботу все существа земли и сама мать планета. При этом на ней интенсивно происходят процессы очищения и исцеления.
+</br></br>
 
 Побудьте в этом состоянии связи-единения с Землёй и ее обитателями столько, сколько почувствуете нужным и затем возвращайтесь в тело.
+</br></br>
 
 Заметьте, в какой части тела находится источник этого золотого духовного света. Положите руку на это место и запомните те чувства, которые сейчас наполняют вас. В следующий раз положив руку на это место, закрыв глаза и подняв взгляд вы уже быстрее и легче сможете войти в это прекрасное ресурсное состояние внутренней светимости.
+</br></br></br>
 
+<span style="font-weight: 600;">ВРЕМЯ ПРОВЕДЕНИЯ.</span>
+</br>
 
-ВРЕМЯ ПРОВЕДЕНИЯ.
 Массовая медитация проводится 4 апреля 2020 года ровно в 22:45 EST в Нью-Йорке, (5 апреля 2020 в 05:45 МСК в Москве) в течение 20 минут.
+</br></br>
 
 Это равно 21:45 CDT в Чикаго, 20:45 MDT в Денвере и 19:45 PDT в Лос-Анджелесе — 4 апреля. Европа и Азия уже будут иметь 5 апреля в момент активации, которая будет 03,45 BST в Лондоне, 04:45 CEST в Париже, 04:45 EET в Каире, 05:45 МСК в Москве, 10:45 CST в Тайбэе и Пекине, 11:45 JST в Токио и 12:45 AEST в Сиднее.
+</br></br>
 
-Вы можете проверить время медитации для вашего часового пояса здесь:
-https://www.timeanddate.com/worldclock/fixedtime.html..
-
+<span style="font-weight: 600;">Вы можете проверить время медитации для вашего часового пояса здесь:</span>
+</br>
+<a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=ASCENSION+TIMELINE&iso=20200404T2245&p1=179">
+https://www.timeanddate.com/worldclock/fixedtime.html?msg=ASCENSION+TIMELINE&iso=20200404T2245&p1=179</a>
+</br></br>
 2020 год — это мощный астрологический год, который приведёт нас в долгожданную Эру Водолея. Астрологи всего мира предсказали, что 2020 год
- 
 станет «определяющим годом судьбы человечества», «переломным моментом» и «серьёзным перераспределением власти».Во многом это связано с беспрецедентным астрологическим выравниванием, включая чрезвычайно мощное соединение Юпитер / Плутон, начинающееся 4 апреля, и последующее тройное соединение Сатурн-Плутон-Юпитер, которое в последний раз произошло 700 лет назад.
+</br></br>
+<span style="font-weight: 600;">"МИРНЫЙ ЭКСПЕРЕМЕНТ"</span>
+</br>
 
-"МИРНЫЙ ЭКСПЕРЕМЕНТ"
 Во время ливано-израильской войны, начавшейся в 1982 году, ряд исследователей провёл эксперимент, в ходе которого группу людей обучали способности ощущать мир внутри себя, но не с помощью мыслей о мире или молитвы «во благо» мира, а с помощью убеждения в том, что он, этот мир, в них уже присутствует.
+</br></br>
 
 В ходе эксперимента его участники с целью обретения указанного чувства прибегали к медитации.В специально назначенное время в специально выбранные дни месяца этих людей забрасывали в истерзанные войной регионы Ближнего Востока. И когда они посреди всего этого кошмара преисполнялись чувством мира, террористические действия прекращались, преступления против мирных жителей шли на спад, количество пострадавших, доставляемых в госпитали, и число дорожных происшествий уменьшалось.
+</br></br>
 
-Такие исследования подтвердили ранее сделанные открытия: когда даже небольшой процент населения обретает внутреннее состояние мира и покоя, это состояние отражается в окружающем мире.Это исследование получило название «Международного проекта мира на Ближнем Востоке», а его результаты опубликовал «Журнал разрешения конфликтов» (1988 г.).          
-</span></div>
+Такие исследования подтвердили ранее сделанные открытия: когда даже небольшой процент населения обретает внутреннее состояние мира и покоя, это состояние отражается в окружающем мире.Это исследование получило название «Международного проекта мира на Ближнем Востоке», а его результаты опубликовал «Журнал разрешения конфликтов» (1988 г.).
+</br>
+<!-- </span> -->
+</div></div>
         </div>
       </div>
     </div>
