--- a/index.html
+++ b/index.html
@@ -5,26 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <title>Всемирная Медитация</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.1.0/css/flag-icon.min.css" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+  <link rel="manifest" href="favicons/site.webmanifest">
+  <title>World Wide Meditation</title>
 </head>
 <body>
   <header>
   </header>
   <div class="container-fluid">
+
     <div class="row">
       <div style="text-align: center; height: 100%; width: 100%; background-image: url('img/IMG_2412.jpg'); background-position: center center; background-repeat: no-repeat; position: relative; background-size: cover; background-attachment: fixed;">
+    <div class="dropdown float-right">
+      <button id="languageSelector" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <button class="dropdown-item" onclick="i18next.changeLanguage('en')"><span class="flag-icon flag-icon-us"></span> English</button>
+              <button class="dropdown-item" onclick="i18next.changeLanguage('ru')"><span class="flag-icon flag-icon-ru"></span> Русский</button>
+      </div>
+    </div> 
         <div class="my-5 pt-5 pb-4">
-          <span class="h6 text-white"; style="text-transform:uppercase; letter-spacing: 2.5px; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased;">PURE PEACE. PURE LIFE.</span>
+          <span id="purePeace" class="h6 text-white"; style="text-transform:uppercase; letter-spacing: 2.5px; font-weight: 100; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased;">PURE PEACE. PURE LIFE.</span>
         </div>
 
         <div class="mt-5 px-4 py-4">
-          <span class="display-4 text-white"; style="text-transform:uppercase; font-weight: 600; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased; letter-spacing: .5px; ">ВСЕМИРНАЯ МЕДИТАЦИЯ</br>ВО БЛАГО ПЛАНЕТЫ</span>
+          <span id="bigHeader" class="display-4 text-white"; style="text-transform:uppercase; font-weight: 600; font-family: 'Roboto'; text-align: center; -webkit-font-smoothing: antialiased; letter-spacing: .5px; ">ВСЕМИРНАЯ МЕДИТАЦИЯ</br>ВО БЛАГО ПЛАНЕТЫ</span>
         </div>
         <div class="mb-5 pt-4 pb-5 pl-5 pr-5">
-          <span class="h5 text-white"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Международная молитва-медитация для гармонизации процессов на планете.</span>
+          <span id="smallHeader" class="h5 text-white"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Международная молитва-медитация для гармонизации процессов на планете.</span>
         </div>
         <div class="mt-5 pt-4 pb-5 pl-5 pr-5">
-          <span class="h5"; style="font-weight: 400; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Друзья, приглашаем вас на международную молитву-медитацию 4 апреля 2020г в 22:45 EST</br>(5 апреля в 05:45 Москва).</span>
+          <span id="invitation" class="h5"; style="font-weight: 400; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Друзья, приглашаем вас на международную молитву-медитацию 4 апреля 2020г в 22:45 EST</br>(5 апреля в 05:45 Москва).</span>
         </div>
     <div class="pt-4 pb-5 pl-5 pr-5 text-justify"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased;">
       Сила для радикальных изменений находится внутри нас, и она может усилиться многократно, если будет реализована в унисон коллективно.
@@ -131,5 +145,7 @@ https://www.timeanddate.com/worldclock/fixedtime.html?msg=ASCENSION+TIMELINE&iso
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/i18next@19.3.4/dist/umd/i18next.min.js"></script>
+  <script src="js/globalmeditation.js"></script>
 </body>
 </html>
