--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <span id="invitation" class="h5"; style="font-weight: 400; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased; max-width: 700px;">Друзья, приглашаем вас на международную молитву-медитацию 4 апреля 2020г в 22:45 EST</br>(5 апреля в 05:45 Москва).</span>
         </div>
     <div class="pt-4 pb-5 pl-5 pr-5 text-justify"; style="font-weight: 300; font-family: 'Roboto', Arial, sans-serif; text-align: center; -webkit-font-smoothing: antialiased;">
+      <span id="p1">
       Сила для радикальных изменений находится внутри нас, и она может усилиться многократно, если будет реализована в унисон коллективно.
     </br>
     Вместе мы можем приступить к созданию нового мира — мира Золотого Века, где царят Любовь, Свобода, Изобилие, Мир и Совершенное Здоровье!
@@ -49,6 +50,9 @@
   НАИБОЛЕЕ МОЩНЫЙ ИНСТРУМЕНТ, КОТОРЫЙ МЫ ИМЕЕМ ДЛЯ ОСВОБОЖДЕНИЯ, ОБНОВЛЕНИЯ И ИСЦЕЛЕНИЯ ЧЕЛОВЕЧЕСТВА И ВСЕЙ ЖИЗНИ НА ЭТОЙ ПЛАНЕТЕ — НАПРАВЛЕННОЕ ГРУППОВОЕ НАМЕРЕНИЕ ЧЕРЕЗ МАССОВУЮ МЕДИТАЦИЮ.
 </br></br>
 Давайте использовать его в полной мере!
+</span>
+
+<span id="p2">
 </br></br>
 Мы считаем, что происходящие сейчас на земле- эпидемии, войны, рост социального напряжения, изменение климата и природные катаклизмы являются знаковыми и дают шанс изменить к лучшему тенденции развития Разума на планете.
 </br>
@@ -59,6 +63,8 @@
 Какими бы ни были ваши личные взгляды или убеждения в отношении эволюции Разума на планете, мы все видим необходимость выбора более экологичной модели поведения популяции по отношению к себе и к планете в целом.
 </br></br>
 Вместе мы можем многое!
+</span>
+<span id="p3">
 </br></br>
 Давайте соберемся вместе для глобальной медитации 4 апреля и в состоянии радости, любви и благодарности объединимся как множество точек Света. И пусть эти острова и материки Света станут якорями энергий Мира, Гармонии, Изобилия, Свободы и Исцеления!
 </br>
@@ -72,6 +78,7 @@
 </br></br>
 Скажите, вы чувствовали в присутствие духовно сильной личности силовое поле любви и спокойствия, находиться в котором приятно и легко? Так почему бы нам с вами не развивать в себе эту чудодейственную способность с помощью любви менять мир к лучшему, пробуждая в людях то, что называется Душой?
 </br></br>
+</span>
 <span style="font-weight: 600;">ВАЖНО!</span>
 </br>
 Во время медитации необходимо ощущать мир внутри себя, не просто мыслить о необходимости исцеления разума и планеты, формулируя пожелания, а живо представлять происходящие изменения и чувствовать себя так, как будто эти изменения уже произошли. Видеть гармоничные образы чистой, мирной планеты и радостных людей, чувствовать ароматы цветов, слышать шум прибоя и шелест листвы, видеть себя в в этих прекрасных местах и эмоционально, ярко переживать этот чудесный опыт. Очень важно убедить себя, что этот мир – реальность, что он уже проявляется, что жители земли готовы принять новую реальность.
