--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
 Скажите, вы чувствовали в присутствие духовно сильной личности силовое поле любви и спокойствия, находиться в котором приятно и легко? Так почему бы нам с вами не развивать в себе эту чудодейственную способность с помощью любви менять мир к лучшему, пробуждая в людях то, что называется Душой?
 </br></br>
 </span>
-<span style="font-weight: 600;">ВАЖНО!</span>
+<span id = "important" style="font-weight: 600;">ВАЖНО!</span>
+<span id = "p4">
 </br>
 Во время медитации необходимо ощущать мир внутри себя, не просто мыслить о необходимости исцеления разума и планеты, формулируя пожелания, а живо представлять происходящие изменения и чувствовать себя так, как будто эти изменения уже произошли. Видеть гармоничные образы чистой, мирной планеты и радостных людей, чувствовать ароматы цветов, слышать шум прибоя и шелест листвы, видеть себя в в этих прекрасных местах и эмоционально, ярко переживать этот чудесный опыт. Очень важно убедить себя, что этот мир – реальность, что он уже проявляется, что жители земли готовы принять новую реальность.
 </br></br></br>
-
-<span style="font-weight: 600;">ТЕХНИКА ПРОВЕДЕНИЯ МЕДИТАЦИИ.</span>
+</span>
+<span id="meditationTechnique" style="font-weight: 600;">ТЕХНИКА ПРОВЕДЕНИЯ МЕДИТАЦИИ.</span>
+<span id="p5">
 </br>
 1. Используйте любую знакомую и доступную вам технику войдите в расслабленное, спокойное и доброжелательное состояние сознания.
 </br></br>
@@ -101,7 +103,7 @@
 
 Два луча встречаются в вашем теле и в месте встречи возникает сгусток яркого тёплого бело-золотистого света. Свечение его нарастает и тёплый исцеляющий свет любви и потенциалов распространяется в каждую клеточку вашего тела, насыщая энергией и силой преображения.
 </br></br>
-
+</span>
 Вы чувствуете наполнение силой , светом и энергией изнутри. Представьте, что это внутреннее свечение становится все ярче и вот уже ваше тело светится прекрасным бело-золотым светом силы Духа и вы начинаете излучать тысячи золотых лучиков, тянущихся ко всем живым существам планеты, наполняя их новой целительной энергией любви и сострадания. И Свет распространяется по планете, наполняя умы и сердца людей, даря понимание и силу радостного преображения мира. Этот свет очищает моря, реки, источники и воздух в городах, уходят проблемы и болезни, и по планете звучат радостные голоса зверей и птиц, звонкий смех детей.
 </br></br>
 
