--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 Два луча встречаются в вашем теле и в месте встречи возникает сгусток яркого тёплого бело-золотистого света. Свечение его нарастает и тёплый исцеляющий свет любви и потенциалов распространяется в каждую клеточку вашего тела, насыщая энергией и силой преображения.
 </br></br>
 </span>
+<span id="p6">
 Вы чувствуете наполнение силой , светом и энергией изнутри. Представьте, что это внутреннее свечение становится все ярче и вот уже ваше тело светится прекрасным бело-золотым светом силы Духа и вы начинаете излучать тысячи золотых лучиков, тянущихся ко всем живым существам планеты, наполняя их новой целительной энергией любви и сострадания. И Свет распространяется по планете, наполняя умы и сердца людей, даря понимание и силу радостного преображения мира. Этот свет очищает моря, реки, источники и воздух в городах, уходят проблемы и болезни, и по планете звучат радостные голоса зверей и птиц, звонкий смех детей.
 </br></br>
 
@@ -118,8 +119,9 @@
 
 Заметьте, в какой части тела находится источник этого золотого духовного света. Положите руку на это место и запомните те чувства, которые сейчас наполняют вас. В следующий раз положив руку на это место, закрыв глаза и подняв взгляд вы уже быстрее и легче сможете войти в это прекрасное ресурсное состояние внутренней светимости.
 </br></br></br>
-
-<span style="font-weight: 600;">ВРЕМЯ ПРОВЕДЕНИЯ.</span>
+</span>
+<span id="timeOfEvent" style="font-weight: 600;">ВРЕМЯ ПРОВЕДЕНИЯ.</span>
+<span id="p7">
 </br>
 
 Массовая медитация проводится 4 апреля 2020 года ровно в 22:45 EST в Нью-Йорке, (5 апреля 2020 в 05:45 МСК в Москве) в течение 20 минут.
@@ -127,16 +129,19 @@
 
 Это равно 21:45 CDT в Чикаго, 20:45 MDT в Денвере и 19:45 PDT в Лос-Анджелесе — 4 апреля. Европа и Азия уже будут иметь 5 апреля в момент активации, которая будет 03,45 BST в Лондоне, 04:45 CEST в Париже, 04:45 EET в Каире, 05:45 МСК в Москве, 10:45 CST в Тайбэе и Пекине, 11:45 JST в Токио и 12:45 AEST в Сиднее.
 </br></br>
-
-<span style="font-weight: 600;">Вы можете проверить время медитации для вашего часового пояса здесь:</span>
+</span>
+<span id="p8" style="font-weight: 600;">Вы можете проверить время медитации для вашего часового пояса здесь:</span>
 </br>
 <a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=ASCENSION+TIMELINE&iso=20200404T2245&p1=179">
 https://www.timeanddate.com/worldclock/fixedtime.html?msg=ASCENSION+TIMELINE&iso=20200404T2245&p1=179</a>
 </br></br>
+<span id="p9">
 2020 год — это мощный астрологический год, который приведёт нас в долгожданную Эру Водолея. Астрологи всего мира предсказали, что 2020 год
 станет «определяющим годом судьбы человечества», «переломным моментом» и «серьёзным перераспределением власти».Во многом это связано с беспрецедентным астрологическим выравниванием, включая чрезвычайно мощное соединение Юпитер / Плутон, начинающееся 4 апреля, и последующее тройное соединение Сатурн-Плутон-Юпитер, которое в последний раз произошло 700 лет назад.
+</span>
 </br></br>
-<span style="font-weight: 600;">"МИРНЫЙ ЭКСПЕРЕМЕНТ"</span>
+<span id="peacefulExperiment" style="font-weight: 600;">"МИРНЫЙ ЭКСПЕРЕМЕНТ"</span>
+<span id="p10">
 </br>
 
 Во время ливано-израильской войны, начавшейся в 1982 году, ряд исследователей провёл эксперимент, в ходе которого группу людей обучали способности ощущать мир внутри себя, но не с помощью мыслей о мире или молитвы «во благо» мира, а с помощью убеждения в том, что он, этот мир, в них уже присутствует.
@@ -147,6 +152,7 @@ https://www.timeanddate.com/worldclock/fixedtime.html?msg=ASCENSION+TIMELINE&iso
 
 Такие исследования подтвердили ранее сделанные открытия: когда даже небольшой процент населения обретает внутреннее состояние мира и покоя, это состояние отражается в окружающем мире.Это исследование получило название «Международного проекта мира на Ближнем Востоке», а его результаты опубликовал «Журнал разрешения конфликтов» (1988 г.).
 </br>
+</span>
 </div></div>
 </div>
 </div>
